Closed Bug 432888 Opened 17 years ago Closed 17 years ago

it is not possible to specify the initial value of -moz-user-select

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a1

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

It's not possible to specify the initial value of -moz-user-select. The code seems to call it 'auto', but the parser doesn't accept it. This causes some style system mochitests to fail.
Attached patch patchSplinter Review
Attachment #320057 - Flags: superreview?(bzbarsky)
Attachment #320057 - Flags: review?(bzbarsky)
Attachment #320057 - Flags: superreview?(bzbarsky)
Attachment #320057 - Flags: superreview+
Attachment #320057 - Flags: review?(bzbarsky)
Attachment #320057 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0
Target Milestone: mozilla2.0 → mozilla1.9.1
Target Milestone: mozilla1.9.1 → mozilla1.9.1a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: