Allow the initial value of -moz-user-select to be specified with 'auto'.  b=432888  r+sr=bzbarsky